--- a/src/style.scss
+++ b/src/style.scss
@@ -102,7 +102,7 @@ code {
 		border-right: solid 1px $md-grey-300;
 		border-top-right-radius: 3px;
 		padding-right: 1.5rem;
-		width: 100rem;
+		width: 100% !important;
 	}
 
 	.demo_resize {
