--- a/src/style.scss
+++ b/src/style.scss
@@ -82,7 +82,7 @@ pre,
     border-top-left-radius: 3px;
     background: white;
     position: relative;
-    padding: 1.5rem 3.25rem 1.5rem 1.5rem;
+    padding: 0 3.25rem 0 1.5rem;
     max-width: 100%;
     min-width: 20rem;
 }
