--- a/src/style.scss
+++ b/src/style.scss
@@ -85,7 +85,7 @@ pre,
     position: relative;
     background: #fafafa;
     min-width: 20rem;
-    margin: 1.5rem;
+    margin-bottom: 1.5rem;
 }
 
 .demo_preview {
