--- a/src/style.scss
+++ b/src/style.scss
@@ -89,7 +89,7 @@ pre,
 }
 
 .demo_preview {
-    padding: 0 3.25rem 0 1.5rem;
+    padding: 1.5rem 3.25rem 1.5rem 1.5rem;
     border-top: solid 1px $md-grey-300;
     border-left: solid 1px $md-grey-300;
     border-top-right-radius: 3px;
